--- a/components/widgets/Console/Console.module.css
+++ b/components/widgets/Console/Console.module.css
@@ -65,3 +65,14 @@
 
     animation: arrivalo 0.3s ease;
 }
+
+
+.success {
+    color: var(--success-color);
+}
+.warning {
+    color: var(--warning-color);
+}
+.error {
+    color: var(--error-color);
+}
