--- a/components/pages/BasePage/BasePage.module.css
+++ b/components/pages/BasePage/BasePage.module.css
@@ -1,5 +1,7 @@
 .page {
     min-height: calc(100vh + var(--footer-min-height));
+}
+.pageSidebarMargin {
     margin-left: var(--sidebar-width);
 }
 .footerless {
