--- a/components/wrappers/Dropout/Dropout.module.css
+++ b/components/wrappers/Dropout/Dropout.module.css
@@ -11,7 +11,7 @@
     margin: 0;
     padding: 5px;
 
-    background-color: #444;
+    background-color: var(--dropdown-bk);
 
     border-radius: 5px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
@@ -32,7 +32,4 @@
     padding: 5px;
 
     height: auto;
-}
-.dropoutItem:hover {
-    background-color: #555;
 }
