New header border

--- a/components/pages/BasePage/BasePage.module.css
+++ b/components/pages/BasePage/BasePage.module.css
@@ -1,5 +1,6 @@
 .page {
     min-height: calc(100vh + var(--footer-min-height));
+    background-color: var(--bk-color);
 }
 .pageSidebarMargin {
     margin-left: var(--sidebar-width);
