--- a/components/ui/input/ExTextBox/ExTextBox.module.css
+++ b/components/ui/input/ExTextBox/ExTextBox.module.css
@@ -1,5 +1,5 @@
 .hint {
-    color: var(--subtitle-color);
+    color: var(--hint-color);
     font-size: small;
 
     transition: all 0.3s ease;
@@ -9,7 +9,7 @@
     pointer-events: none;
 }
 .highlightedHint {
-    color: #5e6e7e;
+    color: var(--highlight-hint-color);
 }
 .hintOverlap {
     transform: scale(1.2) translateY(20px);
@@ -19,7 +19,7 @@
     transition: all 0.3s ease;
     
     padding-bottom: 5px;
-    border-bottom: 1px solid var(--subtitle-color);
+    border-bottom: 1px solid var(--hint-color);
 
     position: relative;
 }
@@ -33,22 +33,17 @@
     font-family: inherit;
 }
 
-.icon {
-    width: 25px;
-    height: 25px;
+.icon svg {
+    width: 30px;
+    height: 30px;
 
-    filter: brightness(0) saturate(100%) invert(48%) sepia(0%) saturate(27%) hue-rotate(53deg) brightness(94%) contrast(105%);
+    color: var(--hint-color);
 
     transition: all 0.3s ease;
 }
 
-.vButton {
-    filter: brightness(0) saturate(100%) invert(48%) sepia(0%) saturate(27%) hue-rotate(53deg) brightness(94%) contrast(105%);
-    transition: all 0.3s ease;
-}
-
-.highlightedIcon {
-    filter: brightness(0) saturate(100%) invert(16%) sepia(51%) saturate(738%) hue-rotate(170deg) brightness(86%) contrast(81%);
+.highlightedIcon svg {
+    color: var(--highlight-hint-color);
 }
 
 .expander {
@@ -58,7 +53,7 @@
 
     width: 100%;
 
-    border: 1px solid var(--subtitle-color);
+    border: 1px solid var(--accent-color);
 
     transition: all 0.3s ease;
     transform: scaleX(0);
@@ -66,12 +61,10 @@
 .highlightedExpander {
     left: 0%;
     transform: scaleX(1);
-    border: 1px solid var(--subtitle-highlighted-color);
+    border: 1px solid var(--highlight-hint-color);
 }
 
-.errorIcon {
-    filter: brightness(0) saturate(100%) invert(54%) sepia(87%) saturate(4243%) hue-rotate(332deg) brightness(108%) contrast(107%);
-}
+.errorIcon svg,
 .errorHint {
     color: var(--dstu-error-color);
 }
