--- a/components/widgets/ProfileSidebar/ProfileSidebar.module.css
+++ b/components/widgets/ProfileSidebar/ProfileSidebar.module.css
@@ -1,6 +1,7 @@
 .profileSidebar {
     background-color: var(--sidebar-user-bk);
     border-radius: 10px 0 0 10px;
+    color: var(--font-color);
 }
 
 span.name {
