Fixed modal color

--- a/components/wrappers/Modal/Modal.module.css
+++ b/components/wrappers/Modal/Modal.module.css
@@ -1,6 +1,6 @@
 .modal {
     position: absolute;
-    background-color: var(--panel-background-color);
+    background-color: var(--modal-bk);
 }
 
 .headerContainer {
