New dark theme bk color

--- a/variables.css
+++ b/variables.css
@@ -128,7 +128,7 @@ body.dark {
     /*        */    
 
     /* BACKGROUND */
-    --bk-color: #0d1117;
+    --bk-color: #242424;
     --header-bk-color: #000;
 
     /* RESULT STATES PALETTE */
