--- a/components/widgets/CopyFrame/CopyFrame.module.css
+++ b/components/widgets/CopyFrame/CopyFrame.module.css
@@ -1,3 +1,9 @@
 .cf {
     
 }
+.cf:hover {
+    background-color: var(--button-hover-bk);
+}
+.cf:active {
+    background-color: var(--button-active-bk);
+}
