--- a/styles.css
+++ b/styles.css
@@ -412,6 +412,7 @@ input:-webkit-autofill:hover,
 input:-webkit-autofill:focus{
   background-color: transparent;
   transition: background-color 50000s ease-in-out 0s;
+  -webkit-text-fill-color: var(--font-color);
 }
 
 /* CURSOR */
