--- a/variables.css
+++ b/variables.css
@@ -96,9 +96,9 @@ body.light {
     --button-theme-toggle-hover-bk: rgba(0, 0, 0, 0);
     --dstu-accent-button-bk: var(--dstu-dark-blue);
     --dstu-accent-button-hover-bk: var(--dstu-light-blue);
-    --colorbutton-color: var(--accent-color);
-    --colorbutton-color-hover: var(--accent-color-hover);
-    --colorbutton-color-active: var(--accent-color-active);
+    --colorbutton-color: var(--font-color);
+    --colorbutton-color-hover: color-mix(in srgb, var(--colorbutton-color) 50%, grey 50%);
+    --colorbutton-color-active: color-mix(in srgb, var(--colorbutton-color) 50%, white 50%);
 
     /* SIDEBAR */
     --sidebar-user-bk: #fff;
@@ -118,12 +118,14 @@ body.light {
     --title-font-color: #000;
     --display-font-color: #77c0c6;
     --hint-color: #999;
-    --highlight-hint-color: var(--highlight-font-color);
 
     /* ACCENT */
-    --accent-color: #333;
+    --accent-color: var(--dstu-dark-blue);
     --accent-color-hover: color-mix(in srgb, var(--accent-color) 50%, grey 50%);
     --accent-color-active: color-mix(in srgb, var(--accent-color) 50%, white 50%);
+    --accent-font-color: #fff;
+    --accent-font-color-hover: #fff;
+    --accent-font-color-active: #fff;
 
     /*            */
     /* FULL PROPS */
@@ -168,9 +170,9 @@ body.dark {
     --button-theme-toggle-hover-bk: rgba(0, 0, 0, 0);
     --dstu-accent-button-bk: var(--dstu-light-blue);
     --dstu-accent-button-hover-bk: var(--dstu-dark-blue);
-    --colorbutton-color: var(--accent-color);
-    --colorbutton-color-hover: var(--accent-color-hover);
-    --colorbutton-color-active: var(--accent-color-active);
+    --colorbutton-color: var(--font-color);
+    --colorbutton-color-hover: color-mix(in srgb, var(--colorbutton-color) 50%, grey 50%);
+    --colorbutton-color-active: color-mix(in srgb, var(--colorbutton-color) 50%, black 50%);
 
     /* SIDEBAR */
     --sidebar-user-bk: #151b23;
@@ -190,12 +192,14 @@ body.dark {
     --title-font-color: #fff;
     --display-font-color: #77c0c6;
     --hint-color: var(--highlight-font-color);
-    --highlight-hint-color: var(--font-color);
 
     /* ACCENT */
-    --accent-color: var(--font-color);
+    --accent-color: var(--dstu-light-blue);
     --accent-color-hover: color-mix(in srgb, var(--accent-color) 50%, grey 50%);
     --accent-color-active: color-mix(in srgb, var(--accent-color) 50%, black 50%);
+    --accent-font-color: #fff;
+    --accent-font-color-hover: #fff;
+    --accent-font-color-active: #fff;
 
     /*            */
     /* FULL PROPS */
