--- a/variables.css
+++ b/variables.css
@@ -118,7 +118,7 @@ body.light {
     --title-font-color: #000;
     --display-font-color: #77c0c6;
     --hint-color: #999;
-    --code-bk: #d6d6d6;
+    --code-bk: #f5f5f5;
     --code-font-color: #000;
 
     /* ACCENT */
