--- a/components/pages/BasePage/BasePage.module.css
+++ b/components/pages/BasePage/BasePage.module.css
@@ -1,6 +1,8 @@
 .page {
     min-height: calc(100vh + var(--footer-min-height));
     background-color: var(--bk-color);
+
+    margin-top: 40px;
 }
 .pageSidebarMargin {
     margin-left: var(--sidebar-width);
